<resources>
    <string name="app_name">CryptocurrencyPrices</string>
    <string name="cryptocurrencySymbol">Symbol:</string>
    <string name="cryptocurrencyDate">Date:</string>
    <string name="cryptocurrencyPrice">Price:</string>
    <string name="btnPrev">PREV</string>
    <string name="btnNext">NEXT</string>
    <string name="btnToday">Today</string>
    <string name="menuClearRecords">Clear all records</string>
    <string name="menuGetAllRecords">Get all records</string>
    <string name="menuAddRecord">Add record</string>
    <string name="defaultVsCurrency">USD</string>
    <string name="defaultCryptocurrency">bitcoin</string>
    <string name="defaultDateFormat">dd.MM.yyyy</string>
    <string name="defaultDateTimeFormat">dd.MM.yyyy HH:mm</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="REQUEST_PRICE_DATA_FAILURE">Getting price data error! [%1$s]</string>
    <string name="REQUEST_CRYPTOCURRENCIES_LIST_FAILURE">Getting cryptocurrencies list error! [%1$s]</string>
    <string name="REQUEST_PRICE_HISTORY_FOR_DATE_RANGE_FAILURE">Getting price history for date range error! [%1$s]</string>
    <string name="REQUEST_EXCEEDED_API_RATE_LIMIT">Exceeded API rate limit, try again later.</string>
    <string name="UNKNOWN_FAILURE">Unknown error!</string>
    <string name="txtMin">Min: </string>
    <string name="txtAvg">Avg: </string>
    <string name="txtMax">Max: </string>
    <string name="radioButtonOneYear">1 year</string>
    <string name="radioButtonOneMonth">1 month</string>
    <string name="radioButtonOneWeek">1 week</string>
    <string name="radioButtonOneDay">24 hours</string>
    <string name="UNWRAP_PRICE_DATA_FAILURE">Unwrapping data from API failed!</string>
    <string name="chart_no_cached_data">Lack of internet connection and no cached data in database.</string>
    <string name="lastUpdate">Cached data, updated %1$d minutes ago</string>
    <string name="noCachedData">No cached data!\nGet access to the Internet or try again later!</string>
    <string name="updating">Updating</string>
    <string name="action_refresh">Refresh</string>
    <string name="activityPricesAlerts">Prices alerts</string>
    <string name="add">Add</string>
    <string name="addPriceAlert">Add price alert</string>
    <string name="textInputValueThreshold">Threshold</string>
    <string name="textInputAlertType">Alert type</string>
    <string name="action_save">Save</string>
    <string name="textInputCryptocurrencySymbol">Cryptocurrency symbol</string>
    <string name="enableAlerts">Enable alerts</string>
    <string name="error_occured">Error has occured!</string>
    <string name="OK">OK</string>
    <string name="eula_title">EULA</string>
    <string name="eula_content">By using this application, you accept the absence of warranty for its correct operation - the application is provided \'as is\'. The author bears no responsibility for any potential damages</string>
    <string name="eula_button_agree">Agree</string>
    <string name="eula_exit">Exit</string>
    <string-array name="alertTypes">
        <item>Alert when current value is bigger</item>
        <item>Alert when current value is smaller</item>
    </string-array>
    <string-array name="alertTypesWithValue">
        <item>Alert when current value is bigger than [%1$s]</item>
        <item>Alert when current value is smaller than [%1$s]</item>
    </string-array>
</resources>