<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.ChartFragment">


    <RelativeLayout
        android:id="@+id/flChart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llChartWithOptions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:visibility="gone">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="0.8"
                android:background="@color/purple_700" />

            <LinearLayout
                android:id="@+id/llChartMinMaxAvgPrices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/txtMin" />

                <TextView
                    android:id="@+id/tvMinPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:textSize="20sp"
                    tools:text="0.00" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/txtAvg" />

                <TextView
                    android:id="@+id/tvAvgPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:textSize="20sp"
                    tools:text="0.00" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/txtMax" />

                <TextView
                    android:id="@+id/tvMaxPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    tools:text="0.00" />

            </LinearLayout>

            <RadioGroup
                android:id="@+id/chartRadioGroupTimeRange"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/chartRadioButtonTimeRangeOneYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:text="1 year" />

                <RadioButton
                    android:id="@+id/chartRadioButtonTimeRangeOneMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:text="1 month" />

                <RadioButton
                    android:id="@+id/chartRadioButtonTimeRangeOneWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:text="1 week" />

                <RadioButton
                    android:id="@+id/chartRadioButtonTimeRange24Hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:checked="true"
                    android:text="24 hours" />
            </RadioGroup>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBarChartLoading"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerInParent="true"
            android:visibility="visible" />
    </RelativeLayout>

</FrameLayout>